@@ -1,7 +1,13 @@
 2008-03-25  Dan Winship  <danw@gnome.org>
 
-	* tests/server-auth-test.c (main): Remove erroneous local
-	run_tests variable. (Noted by "Curtman" on IRC.)
+	* libsoup/soup-auth-domain-digest.c (accepts): don't crash if the
+	auth_callback returns NULL (meaning "unrecognized user").
+
+	* tests/server-auth-test.c (do_test, do_auth_tests): Test bad
+	usernames as well as bad passwords.
+	(main): Remove erroneous local run_tests variable.
+
+	Pointed out by Curtis Magyar.
 
 2008-03-19  Dan Winship  <danw@gnome.org>
 
